Added few more additions

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                   <div class="about__buttons">
                      <a href="#contact" class="button">
-                        <i class="ri-send-plane-line nav__link-button">Contact me</i>
+                        <i class="ri-send-plane-line "></i>Contact me
                      </a>
 
                      <a href="https://www.linkedin.com/" target="_blank" class="button__ghost">
@@ -381,7 +381,7 @@
                      I will read all emails/ Send me any
                      message you want and I'll get back to you.
                   </p>
-                  <p class="contact__description-1">
+                  <p class="contact__description-2">
                      I need your <b>Name</b> and <b>Email Address</b>,
                      but you wont receive anything other than your reply.
                   </p>
@@ -487,7 +487,7 @@
       </a>
 
       <!--=============== SCROLLREVEAL ===============-->
-      <script src=""></script>
+      <script src="assets/js/scrollreveal.min.js"></script>
       
       <!--=============== EMAIL JS ===============-->
       <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
