--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                <div class="home__perfil">
                   <div class="home__image">
-                     <img src="assets/img/home-perfil.jpg" alt="image" class="home__img">
+                     <img src="assets/img/Rahul-Formal.jpeg" alt="image" class="home__img">
                      <div class="home__shadow"></div>
 
                      <img src="assets/img/curved-arrow.svg" alt="" class="home__arrow">
@@ -99,9 +99,8 @@
 
                <div class="home__info">
                   <p class="home__description">
-                     <b>Frontend Developer</b>, with knowledge in web 
-                        development and design, I offer the best 
-                        projects resulting in quality work.
+                     A <b>Full Stack Engineer</b> with 7+ Years of Hands-on experience in front-end and back-end development, experienced
+                     in developing Quality and Scalable Projects in multiple agile teams
                   </p>
 
                   <a href="#about" class="home__scroll">
@@ -126,7 +125,7 @@
 
                <div class="about__perfil">
                   <div class="about__image">
-                     <img src="assets/img/about-perfil.jpg" alt="image" class="about__img">
+                     <img src="assets/img/Rahul-Beach.jpg" alt="image" class="about__img">
 
                      <div class="about__shadow"></div>
 
