--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                <div class="home__info">
                   <p class="home__description">
                      A <b>Full Stack Engineer</b> with 7+ Years of Hands-on experience in front-end and back-end development, experienced
-                     in developing Quality and Scalable Projects in multiple agile teams
+                     in developing Quality and Scalable Projects with multiple agile teams
                   </p>
 
                   <a href="#about" class="home__scroll">
@@ -238,21 +238,19 @@
                   <div class="projects__image">
                      <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
 
-                     <a href="#" class="projects__button button">
+                     <a href="https://github.com/Rahulspaghetti/Lung-Disease-Prediction" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
                      </a>
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">Website</h3>
-                     <h2 class="projects__title">Restaurant Website</h2>
+                     <h3 class="projects__subtitle">Freelance Project</h3>
+                     <h2 class="projects__title">Lung Disease Prediction</h2>
 
                      <p class="projects__description">
-                        Restaurant Website
-                        Yoga App
-                        Fast Food App
-                        Coffee Delivery Website
-                        Barbershop Website
+                      A simple machine learning model with an interactive UI 
+                      that uses CT scans of lungs from patients with chronic obstructive pulmonary
+                      and predicts what kind of disease they have based on the images.
                      </p>
                   </div>
 
@@ -261,9 +259,9 @@
                         <i class="ri-github-line"></i> View
                      </a>
 
-                     <a href="www.dribble.com" target="_blank" class="projects__link">
+                     <!-- <a href="www.dribble.com" target="_blank" class="projects__link">
                         <i class="ri-dribbble-line"></i> View
-                     </a>
+                     </a> -->
                   </div>
                </article>
 
@@ -271,30 +269,27 @@
                   <div class="projects__image">
                      <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
 
-                     <a href="#" class="projects__button button">
+                     <a href="https://saleassist.ai/" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
                      </a>
                   </div>
 
                   <div class="projects__content">
                      <h3 class="projects__subtitle">Website</h3>
-                     <h2 class="projects__title">Restaurant Website</h2>
+                     <h2 class="projects__title">Landing Page</h2>
 
                      <p class="projects__description">
-                        Restaurant Website
-                        Yoga App
-                        Fast Food App
-                        Coffee Delivery Website
-                        Barbershop Website
+                        Complete overhaul  of a company's landing page, redesigning it to be more modern and user friendly
+                        for an e-commerce start-up company.
                      </p>
                   </div>
 
                   <div class="projects__buttons">
-                     <a href="" target="_blank" class="projects__link">
+                     <!-- <a href="" target="_blank" class="projects__link">
                         <i class="ri-github-line"></i> View
-                     </a>
+                     </a> -->
 
-                     <a href="www.dribble.com" target="_blank" class="projects__link">
+                     <a href="www.dribble.com" target="https://saleassist.ai/" class="projects__link">
                         <i class="ri-dribbble-line"></i> View
                      </a>
                   </div>
