Added more Informaton

--- a/index.html
+++ b/index.html
@@ -146,12 +146,20 @@
 
                   <ul class="about__list">
                      <li class="about__item">
-                        <b>My Skills Are:</b> HTML, CSS, JavaScript, 
-                           React, Git & GitHub, Bootstrap, Flutter & 
-                           Figma.
+                        <b>Backend Skills:</b> Python, Java, NodeJS, Flask, Spring, FastAPI, .NET
+                     </li>
+                     <li class="about__item">
+                        <b>Frontend Skills:</b> React, Angular, JavaScript, TypeScript, Redux, HTML, CSS.
+                     </li>
+                     <li class="about__item">
+                        <b>Data Pipelines:</b> AWS S3, Azure, Kubernetes, Docker, PostgreSQL, MongoDB
+                     </li>
+                     <li class="about__item">
+                        <b>My Skills Are:</b> AWS S3, Azure, Kubernetes, Docker, PostgreSQL, MongoDB
                      </li>
                   </ul>
 
+                  
                   <div class="about__buttons">
                      <a href="#contact" class="button">
                         <i class="ri-send-plane-line "></i>Contact me
@@ -299,32 +307,28 @@
                   <div class="projects__image">
                      <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
 
-                     <a href="#" class="projects__button button">
+                     <a href="https://github.com/Rahulspaghetti/Betting-Website-Scrapper" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
                      </a>
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">Website</h3>
-                     <h2 class="projects__title">Restaurant</h2>
+                     <h3 class="projects__subtitle">Project</h3>
+                     <h2 class="projects__title">Betting Information Scrapper</h2>
 
                      <p class="projects__description">
-                        Restaurant Website
-                        Yoga App
-                        Fast Food App
-                        Coffee Delivery Website
-                        Barbershop Website
+                        A scrapper program that collects all available information from a betting website
                      </p>
                   </div>
 
                   <div class="projects__buttons">
-                     <a href="" target="_blank" class="projects__link">
+                     <a href="https://github.com/Rahulspaghetti/Betting-Website-Scrapper" target="_blank" class="projects__link">
                         <i class="ri-github-line"></i> View
                      </a>
 
-                     <a href="www.dribble.com" target="_blank" class="projects__link">
+                     <!-- <a href="www.dribble.com" target="_blank" class="projects__link">
                         <i class="ri-dribbble-line"></i> View
-                     </a>
+                     </a> -->
                   </div>
                </article>
 
