--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                   </div>
 
                   <div class="home__social">
-                     <a href="https://www.instagram.com/"  target="_blank" class="home__social-link">
+                     <!-- <a href="https://www.instagram.com/"  target="_blank" class="home__social-link">
                         <i class="ri-instagram-line"></i>
-                     </a>
-                     <a href="https://www.linkedin.com/"  target="_blank" class="home__social-link">
+                     </a> -->
+                     <a href="https://www.linkedin.com/in/rahul-rav1/"  target="_blank" class="home__social-link">
                         <i class="ri-linkedin-box-line"></i>
                      </a>
-                     <a href=""  target="_blank" class="home__social-link">
+                     <a href="https://github.com/Rahulspaghetti"  target="_blank" class="home__social-link">
                         <i class="ri-github-line"></i>
                      </a>
                   </div>
@@ -165,7 +165,7 @@
                         <i class="ri-send-plane-line "></i>Contact me
                      </a>
 
-                     <a href="https://www.linkedin.com/" target="_blank" class="button__ghost">
+                     <a href="https://www.linkedin.com/in/rahul-rav1/" target="_blank" class="button__ghost">
                         <i class="ri-linkedin-box-line"></i>
                      </a>
                   </div>
@@ -263,7 +263,7 @@
                   </div>
 
                   <div class="projects__buttons">
-                     <a href="" target="_blank" class="projects__link">
+                     <a href="https://github.com/Rahulspaghetti" target="_blank" class="projects__link">
                         <i class="ri-github-line"></i> View
                      </a>
 
@@ -293,9 +293,9 @@
                   </div>
 
                   <div class="projects__buttons">
-                     <!-- <a href="" target="_blank" class="projects__link">
+                     <a href="https://github.com/Rahulspaghetti" target="_blank" class="projects__link">
                         <i class="ri-github-line"></i> View
-                     </a> -->
+                     </a>
 
                      <a href="www.dribble.com" target="https://saleassist.ai/" class="projects__link">
                         <i class="ri-dribbble-line"></i> View
@@ -355,7 +355,7 @@
                   </div>
 
                   <div class="projects__buttons">
-                     <a href="" target="_blank" class="projects__link">
+                     <a href="https://github.com/Rahulspaghetti" target="_blank" class="projects__link">
                         <i class="ri-github-line"></i> View
                      </a>
 
@@ -438,15 +438,15 @@
                      </div>
 
                      <div class="contact__social-links">
-                        <a href="www.facebook.com" target="_blank" class="contact__social-link">
+                        <!-- <a href="www.facebook.com" target="_blank" class="contact__social-link">
                            <i class="ri-facebook-circle-line"></i>
-                        </a>
+                        </a> -->
                         
                         <a href="www.instagram.com" target="_blank" class="contact__social-link">
                            <i class="ri-instagram-line"></i>
                         </a>
 
-                        <a href="www.linkedin.com" target="_blank" class="contact__social-link">
+                        <a href="https://www.linkedin.com/in/rahul-rav1/" target="_blank" class="contact__social-link">
                            <i class="ri-linkedin-box-line"></i>
                         </a>
                      </div>
