--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                <div class="home__perfil">
                   <div class="home__image">
-                     <img src="assets/img/Rahul-Formal.jpeg" alt="image" class="home__img">
+                     <img src="assets/img/IMG_7336.JPG" alt="image" class="home__img">
                      <div class="home__shadow"></div>
 
                      <img src="assets/img/curved-arrow.svg" alt="" class="home__arrow">
@@ -125,7 +125,7 @@
 
                <div class="about__perfil">
                   <div class="about__image">
-                     <img src="assets/img/Rahul-Beach.jpg" alt="image" class="about__img">
+                     <img src="assets/img/Rahul IMG_7345 copy.jpg" alt="image" class="about__img">
 
                      <div class="about__shadow"></div>
 
